@@ -88,9 +88,9 @@ well.
 #  define set_obj_data_ptr(pdf,A,B) obj_data_ptr(pdf,A)=B
 
 #  define set_obj_fresh(pdf,A)      obj_offset(pdf,(A))=-2
-#  define set_obj_scheduled(pdf,A)  if (intcast(obj_offset(pdf,A))==-2) obj_offset(pdf,A)=-1
-#  define is_obj_scheduled(pdf,A)   (intcast(obj_offset(pdf,A))>-2)
-#  define is_obj_written(pdf,A)     (intcast(obj_offset(pdf,A))>-1)
+#  define set_obj_scheduled(pdf,A)  if (obj_offset(pdf,A)==-2) obj_offset(pdf,A)=-1
+#  define is_obj_scheduled(pdf,A)   (obj_offset(pdf,A)>-2)
+#  define is_obj_written(pdf,A)     (obj_offset(pdf,A)>-1)
 
 /*  NOTE: The data structure definitions for the nodes on the typesetting side are
     inside |nodes.h| */
